# kallisto

./: .gitignore  .make_binaries.linux.txt  .make_binaries.sh  .make_binaries.windows.txt  .ycm_extra_conf.py  10xstarting.md  1_fasta_to_cfc.ipynb  1_fasta_to_cfc_all_seqs.ipynb  1_fasta_to_cfc_rdrp1.ipynb  2_cfc_tests.ipynb  3_plot_phylogeny.ipynb  CMakeLists.txt  INSTALL.md  Makefile  README.md  _config.yml  about.md  apps.md  apps.md~  astyle.txt  cfc_tests.ipynb  docs.md  download.md  faq.md  fasta_to_cfc.ipynb  gen_release.sh  gulpfile.js  index.html  index.md  installion.md  license.md  license.txt  local_build.md  manual.md  params.json  pseudobam.md  rock64_install.md  singlecell.md  source.md  starting.md
.github/workflows/: release.yml  test.yml
ZZZ/: README.md
ZZZ/src/: BUSTools.cpp  GeneModel.h  H5Writer.cpp  (+3 more)
_posts/: 2015-05-06-v0.42.md  2015-05-12-v0.42.1.md  2015-06-09-v0.42.2.md  2015-07-06-v0.42.2.1.md  2015-08-25-v0.42.3.md  2015-10-29-v0.42.4.md  2016-04-04-v0.42.5.md  2016-06-02-v0.43.0.md  2017-03-20-v0.43.1.md  2018-01-29-v0.44.0.md  2018-11-17-v0.45.0.md  2019-06-12-v0.46.0.md  2019-10-04-v0.46.1.md
benchmark/: load_data.R
ext/bifrost/: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Doxyfile  README.md
ext/bifrost/doc/doxygen/html/: BlockedBloomFilter_8hpp_source.html  ColorSet_8hpp.html  ColorSet_8hpp_source.html  ColoredCDBG_8hpp.html  Common_8hpp_source.html  CompactedDBG_8hpp.html  CompactedDBG_8hpp_source.html  CompactedDBG_8tpp.html  CompressedCoverage_8hpp_source.html  DataAccessor_8hpp.html  DataAccessor_8hpp_source.html  KmerHashTable_8h_source.html  Kmer_8hpp.html  Kmer_8hpp_source.html  NeighborIterator_8hpp_source.html  Node_8h_source.html  RepHash_8hpp_source.html  TinyVector_8hpp_source.html  UnitigIterator_8hpp.html  UnitigIterator_8hpp_source.html  UnitigMap_8hpp_source.html  Unitig_8hpp.html  Unitig_8hpp_source.html  annotated.html  bft_8h_source.html  classCDBG__Data__t.html  classColorSet.html  classColorSet_1_1ColorSet__const__iterator.html  classColoredCDBG.html  classCompactedDBG.html  classCompressedCoverage.html  classCompressedSequence.html  classDataStorage.html  classFastqFile.html  classKmerHashIterator.html  classKmerHashTable_1_1iterator__.html  classKmerIterator.html  classMinimizer.html  classMinimizerHashTable_1_1iterator__.html  classUnitig.html  (+62 more)
ext/bifrost/doc/doxygen/html/search/: all_1.js  all_16.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  (+11 more)
ext/bifrost/doc/doxygen/latex/: ColorSet_8hpp.tex  ColorSet_8hpp_source.tex  ColorSet_8tcc.tex  ColoredCDBG_8hpp.tex  ColoredCDBG_8hpp_source.tex  CompactedDBG_8hpp.tex  CompactedDBG_8hpp_source.tex  CompactedDBG_8tpp.tex  DataAccessor_8hpp.tex  Kmer_8hpp.tex  Kmer_8hpp_source.tex  NeighborIterator_8hpp_source.tex  UnitigIterator_8hpp.tex  UnitigIterator_8hpp_source.tex  UnitigMap_8hpp.tex  UnitigMap_8hpp_source.tex  Unitig_8hpp_source.tex  annotated.tex  bft_8h.tex  classBackwardCDBG.tex  classCCDBG__Data__t.tex  classCDBG__Data__t.tex  classColorSet.tex  classColorSet_1_1ColorSet__const__iterator.tex  classColoredCDBG.tex  classCompactedDBG.tex  classCompressedSequence.tex  classDataAccessor.tex  classDataStorage.tex  classFastqFile.tex  classForwardCDBG.tex  classKmer.tex  classMinimizer.tex  classMinimizerHashTable_1_1iterator__.tex  classRepHash.tex  classUnitigColors.tex  classUnitigColors_1_1UnitigColors__const__iterator.tex  classUnitigMap.tex  classUnitig_3_01void_01_4.tex  classminHashIterator.tex  (+31 more)
ext/bifrost/doc/snippets/: compile_test.sh  test.cpp
ext/bifrost/doc/tutorial/: Intro.md
ext/bifrost/src/: Bifrost.cpp  BitContainer.cpp  BitContainer.hpp  BlockedBloomFilter.cpp  BlockedBloomFilter.hpp  BooPHF.h  CMakeLists.txt  ColorSet.cpp  ColorSet.hpp  ColoredCDBG.hpp  ColoredCDBG.tcc  Common.hpp  CompactedDBG.hpp  CompactedDBG.tcc  CompressedCoverage.cpp  CompressedCoverage.hpp  CompressedSequence.cpp  CompressedSequence.hpp  DataAccessor.hpp  DataAccessor.tcc  DataManager.hpp  DataStorage.hpp  DataStorage.tcc  FASTX_Parser.cpp  FASTX_Parser.hpp  File_Parser.hpp  GFA_Parser.cpp  GFA_Parser.hpp  IO.tcc  Kmer.cpp  Kmer.hpp  KmerCovIndex.hpp  KmerCovIndex.tcc  KmerHashTable.hpp  KmerIterator.cpp  KmerIterator.hpp  KmerStream.hpp  Lock.hpp  MinimizerIndex.cpp  MinimizerIndex.hpp  (+22 more)
func_tests/: CMakeLists.txt  duplicates.fasta  nonATCG.fasta  polyA.fasta  runtests.sh  simple.fasta
python/: README.md  clean_ec_vecs.sh  input.fld  kallisto.py
src/: #KmerIndex.cpp#  BAMUtil.cpp  BAMUtil.hpp  BUSData.cpp  BUSData.h  BUSTools.cpp  BUSTools.h  BlockArray.hpp  Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  EMAlgorithm.h  FastaTools.cpp  FastaTools.h  Fusion.cpp  Fusion.h  Fusion.hpp  GeneModel.cpp  GeneModel.h  H5Writer.cpp  H5Writer.h  Inspect.h  Kmer.cpp  Kmer.hpp  KmerHashTable.h  KmerIndex.cpp  KmerIndex.h  KmerIndex_single_seq.cpp  KmerIterator.cpp  KmerIterator.hpp  Merge.cpp  Merge.h  MinCollector.cpp  MinCollector.h  Multinomial.hpp  Node.hpp  PlaintextWriter.cpp  PlaintextWriter.h  ProcessReads.cpp  ProcessReads.h  (+32 more)
src/src/: Bootstrap.cpp  CMakeLists.txt  GeneModel.cpp  KmerIndex.cpp  KmerIndex.h  MinCollector.cpp  MinCollector.h  ProcessReads.cpp  ProcessReads.h  PseudoBam.cpp  PseudoBam.h  common.h  kseq.h  main.cpp
src/test.dSYM/Contents/Resources/DWARF/: test
test/: CMakeLists.txt  README.md  Snakefile  example_tests.cpp  main.cpp  test_index.cpp  test_sequences.cpp  test_weights.cpp  tests.cpp
test/input/: r2.fastq
unit_tests/: CMakeLists.txt  test_index.cpp  test_kmerhashtable.cpp  test_multinomial.cpp  test_weights.cpp
unit_tests/input/: Get Subseq.ipynb  r1.fastq
(+135 files in other folders)
